Added search for inbox and outbox

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basement_nuxt",
+  "name": "Room_Security",
   "version": "1.0.0",
   "description": "Front for basement project",
   "author": "Marcin Radziewicz",
